--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,23 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~5.0.1",
-    "@angular/common": "~5.0.1",
-    "@angular/compiler": "~5.0.1",
-    "@angular/core": "~5.0.1",
-    "@angular/forms": "~5.0.1",
-    "@angular/http": "~5.0.1",
-    "@angular/platform-browser": "~5.0.1",
-    "@angular/platform-browser-dynamic": "~5.0.1",
-    "@angular/router": "~5.0.1",
+    "@angular/animations": "~6.0.9",
+    "@angular/common": "~6.0.9",
+    "@angular/compiler": "~6.0.9",
+    "@angular/core": "~6.0.9",
+    "@angular/forms": "~6.0.9",
+    "@angular/http": "~6.0.9",
+    "@angular/platform-browser": "~6.0.9",
+    "@angular/platform-browser-dynamic": "~6.0.9",
+    "@angular/router": "~6.0.9",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.18"
+    "rxjs": "^6.2.2",
+    "zone.js": "^0.8.18",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/language-service": "^6.0.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -45,6 +46,7 @@
     "protractor": "~5.2.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
